<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
	<RelativeLayout
	    android:id="@+id/content"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="20dp"
	    android:background="#dd000000"
	   	android:descendantFocusability="beforeDescendants"
		android:focusableInTouchMode="true">
	    <RelativeLayout 
		    android:layout_width="400dp"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_centerVertical="true"
		    android:background="@null"
		    android:layout_margin="20dp">
		     <EditText
			    android:id="@+id/place_id"
			    android:layout_alignParentTop="true"
			    android:layout_height="50dp"
			    android:layout_width="fill_parent"
			    android:singleLine="true"
		   		android:lines="1"
		   		android:inputType="textVisiblePassword|textNoSuggestions"
		   		android:scrollHorizontally="true"
			    android:paddingLeft="10dp"
		    	android:paddingRight="10dp"
		    	android:hint="@string/sitio"
		    	android:gravity="center"
			    android:background="@drawable/edittexts"
			    android:textColor="#000000"/>
		     <Button 
	            android:id="@+id/validate_btn" 
	            android:layout_below="@+id/place_id"
	            android:layout_marginTop="10dp"
		        android:layout_width="fill_parent"
		        android:layout_height="50dp"
		        android:text="@string/validate"
		        android:background="@drawable/login_effect"
				android:layout_centerHorizontal="true"
				android:textColor="#ffffff"
				android:textSize="25sp"/>
		     <ImageView
			    android:id="@+id/loading"
			    android:layout_below="@+id/validate_btn"
			    android:contentDescription="@string/imageViewDesc"
			    android:layout_width="50dp"
			    android:layout_height="50dp"
			    android:layout_centerHorizontal="true"
			    android:src="@drawable/loading"
			    android:layout_marginTop="20dp"
			    android:visibility="gone"/>
		     <Button 
	            android:id="@+id/borrar" 
	            android:layout_below="@+id/loading"
		        android:layout_height="50dp"
		        android:layout_width="fill_parent"
		        android:text="@string/borrar"
		        android:background="@drawable/call_effect"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="25dp"
				android:textColor="#ffffff"
				android:textSize="25sp"/>
		     <Button 
	            android:id="@+id/support" 
	            android:layout_below="@+id/borrar"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:text="@string/support"
		        android:background="#00000000"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="15dp"
				android:textColor="#ffffff"
				android:textSize="18sp"/>
	    </RelativeLayout>
	</RelativeLayout>   
</ScrollView>