<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="20dp"
	   	android:descendantFocusability="beforeDescendants"
	   	android:background="@drawable/app_bg"
		android:focusableInTouchMode="true">
			    
	    <RelativeLayout 
		    android:layout_width="400dp"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_centerVertical="true"
		    android:background="@null"
		    android:paddingBottom="15dp"
		    android:layout_margin="20dp">
		    
	        <ImageView
				android:id="@+id/logo"
			    android:contentDescription="@string/imageViewDesc"
		        android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentTop="true"
			    android:layout_centerHorizontal="true"
			    android:layout_marginLeft="40dp"
			    android:layout_marginBottom="10dp"
			    android:src="@drawable/title_app"/>
		    
		     <EditText
			    android:id="@+id/username"
			    android:layout_below="@+id/logo"
			    android:layout_height="50dp"
			    android:layout_width="fill_parent"
			    android:singleLine="true"
		   		android:lines="1"
		   		android:inputType="textVisiblePassword|textNoSuggestions"
		   		android:scrollHorizontally="true"
			    android:paddingLeft="10dp"
		    	android:paddingRight="10dp"
		    	android:hint="@string/username"
			    android:background="@drawable/edittexts"
			    android:textColor="#000000"/>
		       
		     <EditText
			    android:id="@+id/password"
			    android:layout_below="@+id/username"
			    android:layout_height="50dp"
			    android:layout_width="fill_parent"
			    android:singleLine="true"
		   		android:lines="1"
		   		android:inputType="textPassword"
		   		android:scrollHorizontally="true"
		   		android:layout_marginTop="8dp"
			    android:paddingLeft="10dp"
		    	android:paddingRight="10dp"
		    	android:hint="@string/password"
			    android:background="@drawable/edittexts"
			    android:textColor="#000000"/>
		     
		     <Button 
	            android:id="@+id/login_btn" 
	            android:layout_below="@+id/password"
	            android:layout_marginTop="10dp"
		        android:layout_width="fill_parent"
		        android:layout_height="50dp"
		        android:text="@string/login"
		        android:background="@drawable/login_effect"
				android:layout_centerHorizontal="true"
				android:textColor="#ffffff"
				android:textSize="25sp"/>
		     
		     <LinearLayout 
	      	    android:id="@+id/checkbox" 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:layout_below="@+id/login_btn"
			    android:layout_centerHorizontal="true"
			    android:layout_marginTop="10dp"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp">
		    	<CheckBox
		      	    android:id="@+id/checkbtn" 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"/>
		    	<TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/recordar"
			        android:textSize="16sp"
			        android:textColor="#626262"/>
	    	</LinearLayout>
		     
		     <ImageView
			    android:id="@+id/loading"
			    android:layout_below="@+id/checkbox"
			    android:contentDescription="@string/imageViewDesc"
			    android:layout_width="50dp"
			    android:layout_height="50dp"
			    android:layout_centerHorizontal="true"
			    android:src="@drawable/loading"
			    android:layout_marginTop="18dp"
			    android:visibility="gone"/>
		     
		     <TextView
		        android:id="@+id/error_msg"
		        android:layout_below="@+id/checkbox"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="12dp"
		        android:textSize="20sp"
		        android:textColor="#ee4836"
		        android:visibility="gone"/>
	    </RelativeLayout>
	</RelativeLayout>   
</ScrollView>
