<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/app_bg"
		android:paddingBottom="15dp">
		<RelativeLayout
		    android:id="@+id/authorized"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
			android:paddingBottom="15dp"
			android:visibility="gone">
	    	<LinearLayout 
	    	    android:id="@+id/content"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:minWidth="300dp"
			    android:layout_centerHorizontal="true"
			    android:orientation="vertical"
			    android:background="#e2e2e2"
			    android:padding="10dp"
			    android:layout_margin="10dp">
	    	    
		    	<TextView 
			        android:id="@+id/auth_bar"
			        android:layout_marginBottom="10dp"
			        android:layout_width="match_parent"
			    	android:layout_height="30dp"
			    	android:background="#89f287"
			    	android:gravity="center"
			    	android:text="@string/autorizado"
			    	android:textSize="16sp"
			    	android:textColor="#000000"
			    	android:visibility="gone"/>
		    	
		    	<TextView 
			        android:id="@+id/semi_auth_bar"
			        android:layout_marginBottom="10dp"
			        android:layout_width="match_parent"
			    	android:layout_height="30dp"
			    	android:background="#ff7800"
			    	android:gravity="center"
			    	android:text="@string/semiautorizado"
			    	android:textSize="16sp"
			    	android:textColor="#000000"
			    	android:visibility="gone"/>
		    	
		    	<TextView 
			        android:id="@+id/no_auth_bar"
			        android:layout_marginBottom="10dp"
			        android:layout_width="match_parent"
			    	android:layout_height="30dp"
			    	android:background="#df4625"
			    	android:gravity="center"
			    	android:text="@string/noautorizado"
			    	android:textSize="16sp"
			    	android:textColor="#ffffff"
			    	android:visibility="gone"/>
		    	
				<LinearLayout
				    android:id="@+id/workers"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal"
				    android:visibility="gone">
			       <RelativeLayout
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:paddingRight="15dp">
					    <ImageView
					        android:id="@+id/pic"
					        android:contentDescription="@string/imageViewDesc"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"/>
					</RelativeLayout>
			    
					<LinearLayout
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:orientation="vertical">
					    <TextView
					        android:id="@+id/name"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:textSize="25sp"
					        android:textColor="#00adbb"/>
					    <TextView
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:singleLine="true"
				  			android:lines="1"
					        android:layout_marginTop="5dp"
					        android:textSize="20sp"
					        android:textColor="#000000"
							android:text="@string/codigo"/>
					    <TextView
					        android:id="@+id/id"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:singleLine="true"
				  			android:lines="1"
					        android:layout_marginTop="2dp"
					        android:textSize="20sp"
					        android:textColor="#000000"/>
					</LinearLayout>
				</LinearLayout>
				<LinearLayout
				    android:id="@+id/machines"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="vertical"
				    android:visibility="gone">
				    <TextView
				        android:id="@+id/identifier"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:textSize="25sp"
				        android:textColor="#00adbb"/>
				    <TextView
				        android:id="@+id/type"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:singleLine="true"
			  			android:lines="1"
				        android:layout_marginTop="5dp"
				        android:textSize="20sp"
				        android:textColor="#000000"
						android:text="@string/codigo"/>
				    <TextView
				        android:id="@+id/model"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:singleLine="true"
			  			android:lines="1"
				        android:layout_marginTop="2dp"
				        android:textSize="20sp"
				        android:textColor="#000000"/>
				</LinearLayout>
			</LinearLayout>
			<Button 
	            android:id="@+id/detect_again" 
	            android:layout_below="@+id/content"
		        android:layout_alignLeft="@+id/content"
		        android:layout_alignRight="@+id/content"
		        android:layout_height="50dp"
		        android:layout_width="wrap_content"
		        android:text="@string/detectar_de_nuevo"
		        android:background="@drawable/login_effect"
				android:layout_centerHorizontal="true"
				android:textColor="#ffffff"
				android:textSize="25sp"/>
		</RelativeLayout> 
		<RelativeLayout
		    android:id="@+id/unauthorized"
		    android:layout_width="400dp"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_centerVertical="true"
		    android:background="@drawable/app_bg"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
			android:paddingBottom="10dp"
			android:visibility="gone">
		    	
		    <TextView
		        android:id="@+id/unauth"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:singleLine="true"
	  			android:lines="1"
		        android:textSize="30sp"
		        android:textColor="#df4625"
		        android:text="@string/no_autorizado"/>
		    
		    <ImageView
			    android:id="@+id/unauth_icon"
			    android:contentDescription="@string/imageViewDesc"
			    android:layout_width="150dp"
			    android:layout_height="150dp"
			    android:layout_marginTop="15dp"
			    android:layout_centerHorizontal="true"
			    android:layout_centerVertical="true"
			    android:src="@drawable/unauthorized"
			    android:layout_below="@+id/unauth"/>

			<Button 
	            android:id="@+id/detect_again2" 
	            android:layout_below="@+id/unauth_icon"
		        android:layout_height="50dp"
		        android:layout_width="fill_parent"
		        android:text="@string/detectar_de_nuevo"
		        android:background="@drawable/login_effect"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="20dp"
				android:textColor="#ffffff"
				android:textSize="25sp"/>
			<Button 
	            android:id="@+id/call" 
	            android:layout_below="@+id/detect_again2"
		        android:layout_height="50dp"
		        android:layout_width="fill_parent"
		        android:text="@string/support"
		        android:background="@drawable/call_effect"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="15dp"
				android:textColor="#ffffff"
				android:textSize="25sp"/>
		</RelativeLayout> 
		<ImageView
		    android:id="@+id/loading"
		    android:contentDescription="@string/imageViewDesc"
		    android:layout_width="150dp"
		    android:layout_height="150dp"
		    android:layout_centerHorizontal="true"
		    android:layout_centerVertical="true"
		    android:src="@drawable/loading"
		    android:visibility="visible"/>
	</RelativeLayout>   
</ScrollView>





